# tiles

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
.claude/: settings.local.json
crates/beeps/: Cargo.toml
crates/beeps/src/: assets.rs  command.rs  engine.rs  lib.rs  mixer.rs  voice.rs
crates/beeps/src/effect/: delay.rs  (+4 more)
crates/editor/: Cargo.toml
crates/editor/src/: document.rs  editor.rs  history.rs  io.rs  main.rs  tools.rs
crates/palette/: Cargo.toml
crates/palette/src/: solver.rs
crates/panes/: Cargo.toml
crates/panes/src/: buffer.rs  config.rs  context.rs  layout.rs  lib.rs  macros.rs  widget.rs  widgets.rs
crates/sandbox/: Cargo.toml
crates/sandbox/examples/: boids.rs  colors.rs  element.rs  fire.rs  fonts.rs  image.rs  image_widget.rs  lighting.rs  nbody.rs  palette.rs  palette_partition.rs  particles.rs  rotation.rs  shapes.rs  sprite.rs  synth.rs  ui.rs
crates/sandbox/src/: main.rs
crates/tiles/: Cargo.toml  build.rs
crates/tiles-macros/: Cargo.toml
crates/tiles-macros/src/: lib.rs
crates/tiles/fonts/: Tiny5.bdf
crates/tiles/src/: anchor.rs  camera.rs  cell.rs  color.rs  config.rs  context.rs  drawable.rs  element.rs  handlers.rs  image.rs  input.rs  lib.rs  line.rs  node.rs  rect.rs  renderer.rs  runner.rs  shape.rs  signal.rs  size.rs  style.rs  text.rs  ui.rs
crates/tiles/src/font/: mod.rs
docs/adr/: 0001-gpu-instancing-with-multi-draw.md  0002-two-pass-depth-rendering.md  0003-audio-as-independent-crate-with-cpal.md  0004-panes-semi-immediate-ui-library.md  0005-text-as-cell-builder-not-rendering-primitive.md
(+13 files in other folders)
